--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
+  "homepage": "https://ajinkyasawarkar.github.io/floraofiitt/",
   "name": "rest-express",
   "version": "1.0.0",
   "type": "module",
   "license": "MIT",
   "scripts": {
     "dev": "tsx server/index.ts",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
