--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "dev": "tsx server/index.ts",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
-    "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
-    "start": "NODE_ENV=production node dist/index.js",
+    "build": "vite build",
+    "start": "vite preview",
     "check": "tsc",
     "db:push": "drizzle-kit push"
   },
